# KOCCA

./: CMakeLists.txt  README.md  exe_icon.rc  inno_setup_installer.iss  kocca.ui
doc/: KOCCA_developer_guide.odt  KOCCA_user_manual.odt
doc/API reference/: Doxyfile
src/: main.cpp
src/kocca/: Application.cpp  Application.h  Exceptions.h  KinectV2Sensor.cpp  KinectV2Sensor.h  utils.cpp  utils.h
src/kocca/datalib/: CalibrationParametersSet.h  ExtrinsicCalibrationParametersSet.cpp  ExtrinsicCalibrationParametersSet.h  FramePath.cpp  FramePath.h  IntrinsicCalibrationParametersSet.cpp  IntrinsicCalibrationParametersSet.h  KinectCalibrationFile.cpp  KinectCalibrationFile.h  MocapMarker.cpp  MocapMarker.h  MocapMarkerFrame.cpp  MocapMarkerFrame.h  MocapMarkersSequence.cpp  MocapMarkersSequence.h  Sequence.cpp  Sequence.h  SequenceFile.cpp  SequenceFile.h  TaskProgress.cpp  TaskProgress.h  TimeCodedFrame.h
src/kocca/operations/: Calibration.cpp  Calibration.h  Monitoring.cpp  Monitoring.h  Operation.cpp  Operation.h  SequenceReading.cpp  SequenceReading.h  SequenceRecording.cpp  SequenceRecording.h  TimeCodedFrameBuffer.cpp  TimeCodedFrameBuffer.h
src/kocca/widgets/: CalibrationResultCell.cpp  CalibrationResultCell.h  CalibrationTypesChoiceDialog.cpp  CalibrationTypesChoiceDialog.h  CvDrawingArea.cpp  CvDrawingArea.h  KoccaMonitoringWidget.cpp  KoccaMonitoringWidget.h  MainWindow.cpp  MainWindow.h  MocapMarkersTreeView.cpp  MocapMarkersTreeView.h  SelectableCvDrawingArea.cpp  SelectableCvDrawingArea.h  WaitMessagePopup.cpp  WaitMessagePopup.h
